syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 1706
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message AvatarChangeElementTypeReq {
	uint32 scene_id = 15;
	uint32 area_id = 4;
}
